# se-knowledge-search

./: .env.template  .gitignore  README.md  configure-claude.py  pyproject.toml  setup.sh  slack-app-manifest.yaml
.claude/skills/search/: SKILL.md
src/se_knowledge_search/: __init__.py  gong_server.py  highspot_server.py  slack_server.py
