[project]
name = "se-knowledge-search"
version = "0.1.0"
description = "Unified search across Slack, Gong, Google Workspace, and Highspot for SE teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
gong-mcp = "se_knowledge_search.gong_server:main"
highspot-mcp = "se_knowledge_search.highspot_server:main"
slack-mcp = "se_knowledge_search.slack_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/se_knowledge_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
